--- a/charts/sample-shellinabox/values.yaml
+++ b/charts/sample-shellinabox/values.yaml
@@ -54,21 +54,21 @@ resources:
     cpu: 200m
     memory: 256Mi
 
-readinessProbe:
-  httpGet:
-    path: /
-    port: 80
-  initialDelaySeconds: 3
-  periodSeconds: 10
-  failureThreshold: 3
+# readinessProbe:
+#   httpGet:
+#     path: /
+#     port: 80
+#   initialDelaySeconds: 3
+#   periodSeconds: 10
+#   failureThreshold: 3
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: 80
-  initialDelaySeconds: 3
-  periodSeconds: 10
-  failureThreshold: 3
+# livenessProbe:
+#   httpGet:
+#     path: /
+#     port: 80
+#   initialDelaySeconds: 3
+#   periodSeconds: 10
+#   failureThreshold: 3
 
 nodeSelector: {}
 
